# cync-rs

./: .gitignore  Cargo.toml  build.rs
scripts/: generate-certs.sh
src/: lib.rs  main.rs
