[package]
name = "cync-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.17", features = [ "derive" ]}
fern = "0.6.1"
log = "0.4.17"
native-tls = "0.2.10"
rustls-pemfile = "1.0.1"
serde = { version = "1.0.143", features = [ "derive" ] }
tokio = { version = "1.21.2", features = [ "full" ] }
tokio-native-tls = "0.3.0"
warp = "0.3.2"
