[package]
name = "cync-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
clap = { version = "3.2.17", features = [ "derive" ]}
native-tls = "0.2.10"
serde = { version = "1.0.143", features = [ "derive" ] }
serde_json = "1.0.107"
tokio = { version = "1.21.2", features = [ "full" ] }
tokio-native-tls = "0.3.0"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
